# esp32-client

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  all_files  flake.nix  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml  build_linux.yml  format.yml  lint.yml
components/display/: CMakeLists.txt  display_esp.c  display_linux.c
components/display/include/: display.h
components/env_sensor/: CMakeLists.txt  env_sensor_esp.c  env_sensor_linux.c
components/env_sensor/include/: env_sensor.h
components/fs/: CMakeLists.txt  fs_esp.c  fs_linux.c
components/fs/include/: fs.h
components/http/: CMakeLists.txt  http.c
components/http/include/: http.h
components/http_client/: CMakeLists.txt  http_client.c  http_client_esp.c  http_client_linux.c
components/http_client/include/: http_client.h
components/lib/: CMakeLists.txt
components/screen_timeout/: CMakeLists.txt  screen_timeout.c
components/screen_timeout/include/: screen_timeout.h
components/settings_manager/: CMakeLists.txt  settings_manager_esp.c  settings_manager_linux_stub.c
components/settings_manager/include/: settings_manager.h
components/time_manager/: CMakeLists.txt  time_manager_esp.c  time_manager_linux_stub.c
components/ui/: CMakeLists.txt  ui.c  wifi_popup.c  wifi_popup.h
components/ui/include/: ui.h
components/ui/squareline/: ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme_manager.c  ui_themes.c  ui_themes.h
components/ui/squareline/components/: ui_comp_hook.c
components/ui/squareline/images/: ui_img_sun_behind_cloud_3d_png.c
components/ui/squareline/screens/: ui_scr_elpris.c  ui_scr_elpris.h  ui_scr_home.c  ui_scr_home.h  ui_scr_settings.c  ui_scr_settings.h  ui_scr_weather.c  ui_scr_weather.h
components/ui_binder/: CMakeLists.txt  ui_binder_esp.c  ui_binder_linux.c
components/ui_binder/include/: ui_binder.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
components/wifi_manager/: CMakeLists.txt  wifi_manager_esp.c  wifi_manager_linux_stub.c
components/wifi_manager/include/: wifi_manager.h
components/ws7b_board/: CMakeLists.txt  ws7b_board.c
components/ws7b_board/include/: ws7b_board.h
components/ws7b_config/include/: ws7b_config.h
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
scripts/: filter_lint.py  fix_compile_commands.py  scrub_compile_commands.py
simulator/: .gitignore  CMakeLists.txt  sdkconfig.defaults
simulator/components/esp_lcd/: CMakeLists.txt
simulator/components/esp_lcd/include/: esp_lcd_panel_io.h
simulator/components/sim_board/: CMakeLists.txt  idf_component.yml  sim_board.c
simulator/components/sim_board/include/: sim_board.h
simulator/components/time_manager/: CMakeLists.txt  time_manager_esp.c  time_manager_linux_stub.c
simulator/components/time_manager/include/: time_manager.h
simulator/components/wifi_manager/: wifi_manager_esp.c  wifi_manager_linux_stub.c
simulator/main/: CMakeLists.txt  idf_component.yml  main.c
